{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 16,
  "lineage": "c061cb83-fe9f-3ab5-b617-5a9ad8433f03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631345770:security-group/sg-0241efb2fe17e6cbd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0241efb2fe17e6cbd",
            "ingress": [],
            "name": "security group 1",
            "name_prefix": "",
            "owner_id": "183631345770",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010bf17c33e0e688b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631345770",
            "id": "sg-0241efb2fe17e6cbd",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631345770:security-group/sg-02de6f3f961130100",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02de6f3f961130100",
            "ingress": [],
            "name": "security group 2",
            "name_prefix": "",
            "owner_id": "183631345770",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010bf17c33e0e688b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631345770",
            "id": "sg-02de6f3f961130100",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:183631345770:security-group/sg-0a7196ee19c83fce5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a7196ee19c83fce5",
            "ingress": [],
            "name": "security group 3",
            "name_prefix": "",
            "owner_id": "183631345770",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010bf17c33e0e688b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183631345770",
            "id": "sg-0a7196ee19c83fce5",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3205063130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0241efb2fe17e6cbd",
            "security_group_rule_id": "sgr-0761f30df455adecb",
            "self": false,
            "source_security_group_id": "sg-02de6f3f961130100",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-2877411663",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0241efb2fe17e6cbd",
            "security_group_rule_id": "sgr-0b41585d089a0e279",
            "self": false,
            "source_security_group_id": "sg-02de6f3f961130100",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-514818269",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-02de6f3f961130100",
            "security_group_rule_id": "sgr-01418f467d6e7377d",
            "self": false,
            "source_security_group_id": "sg-0241efb2fe17e6cbd",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_second",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3805805908",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-02de6f3f961130100",
            "security_group_rule_id": "sgr-0f8b22d5b86cc5668",
            "self": false,
            "source_security_group_id": "sg-0241efb2fe17e6cbd",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_2"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-50922331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0241efb2fe17e6cbd",
            "security_group_rule_id": "sgr-05eed0d59669dce48",
            "self": false,
            "source_security_group_id": "sg-0a7196ee19c83fce5",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-394376142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0241efb2fe17e6cbd",
            "security_group_rule_id": "sgr-05366e57b23508351",
            "self": false,
            "source_security_group_id": "sg-0a7196ee19c83fce5",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3267170036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0a7196ee19c83fce5",
            "security_group_rule_id": "sgr-00181c8de2676e357",
            "self": false,
            "source_security_group_id": "sg-0241efb2fe17e6cbd",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.first_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-2696509366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0a7196ee19c83fce5",
            "security_group_rule_id": "sgr-01f56e2c7b0ab2941",
            "self": false,
            "source_security_group_id": "sg-0241efb2fe17e6cbd",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_1",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-560030890",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-02de6f3f961130100",
            "security_group_rule_id": "sgr-048666b34f921cc5e",
            "self": false,
            "source_security_group_id": "sg-0a7196ee19c83fce5",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "first_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-3709409571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-02de6f3f961130100",
            "security_group_rule_id": "sgr-0d191b8791a4b5a20",
            "self": false,
            "source_security_group_id": "sg-0a7196ee19c83fce5",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1098090498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0a7196ee19c83fce5",
            "security_group_rule_id": "sgr-0ce638d1908a439ca",
            "self": false,
            "source_security_group_id": "sg-02de6f3f961130100",
            "timeouts": null,
            "to_port": 8500,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    },
    {
      "module": "module.cross_talk_groups.module.second_to_third",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "second_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-595063104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0a7196ee19c83fce5",
            "security_group_rule_id": "sgr-07ecfc7d5c0be892c",
            "self": false,
            "source_security_group_id": "sg-02de6f3f961130100",
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.group_2",
            "aws_security_group.group_3"
          ]
        }
      ]
    }
  ]
}